WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314930
StabilityTracer: Crash in IPC::MessageReceiverMap::invalidate()
https://bugs.webkit.org/show_bug.cgi?id=314930
Summary
StabilityTracer: Crash in IPC::MessageReceiverMap::invalidate()
rupin
Reported
2026-05-15 20:15:52 PDT
rdar://177091898
Attachments
Add attachment
proposed patch, testcase, etc.
rupin
Comment 1
2026-05-15 20:36:22 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65028
EWS
Comment 2
2026-05-19 10:06:27 PDT
Committed
313494@main
(825d9df3072f): <
https://commits.webkit.org/313494@main
> Reviewed commits have been landed. Closing PR #65028 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug